[package]
name = "ffmml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
textparse = "0.0.2"

[workspace]
members = [
  "ffmmlc",
  "ffmml_gui",
]

[patch.crates-io]
textparse = { path = "../textparse/" }
pagurus = { path = "../pagurus/" }
pagurus_game_std = { path = "../pagurus/pagurus_game_std/" }