[package]
name = "ffmml"
version = "0.1.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Famicon (a.k.a. NES) Flavored Music Macro Language"
homepage = "https://github.com/sile/ffmml"
repository = "https://github.com/sile/ffmml"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
textparse = "0.1"

[workspace]
members = [
  "ffmmlc",
  "ffmml_gui",
]
