[package]
name = "ffmml_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
byteorder = "1"
ffmml = { path = "../", version = "0.1" }
log = "0.4"
pagurus = "0.5"
pagurus_game_std = { version = "0.5", default-features = false, features = ["wasm"] }
