[package]
name = "ffmmlc"
version = "0.1.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "FFMML command-line compiler"
homepage = "https://github.com/sile/ffmml"
repository = "https://github.com/sile/ffmml"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
byteorder = "1"
ffmml = { version = "0.1", path = "../", features = ["wav"] }
